--- a/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-binary-indicator-data.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-binary-indicator-data.json
@@ -1,3 +1,4 @@
 {
-    "comments": "Comments"    
+    "comments": "Comments",
+    "binaryIndicatorQuestion": "Your country has not answered this binary indicator question"
 }
