--- a/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-indicator-data.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-indicator-data.json
@@ -10,5 +10,11 @@
     "globalIndicatorProviders": "Indicator providers",
     "comments"          : "Comments",
     "yes"               : "Yes",
-    "no"                : "No"
+    "no"                : "No",
+    "data" : "Data",
+    "indicatorCode": "Indicator code",
+    "doesDisaggregation": "Does this data row represent a disaggregation",
+    "disaggregation": "Disaggregation",
+    "unit": "Unit",
+    "footnote": "Footnote"
 }
