--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-overview.json
@@ -21,6 +21,31 @@
     "spinnerMessage"         : "Please wait while we process your request.",
     "refresh"                : "Refresh",
     "validate"     : "Validate",
-    "publish"     : "Publish"
-    
+    "publish"     : "Publish",
+    "overview" : "Overview",
+    "sectionI": "Section I",
+    "briefOverviewOfProcess": "Brief overview of the process of preparation of the report",
+    "sectionII": "Section II",
+    "sectionIIDescription": "Status of the revised or updated national biodiversity strategies",
+    "sectionIII": "Section III",
+    "assessmentOfProgressNationalTargets": "Assessment of progress towards national targets",
+    "sectionIV": "Section IV",
+    "sectionIVDescription": "Assessment of national progress towards the goals and targets of the Kunming-Montreal Global Biodiversity Framework",
+    "sectionV": "Section V",
+    "conclusionsImplementationConvention": "Conclusions on the national implementation of the Convention and the Kunming-Montreal Global Biodiversity Framework",
+    "annex": "Annex",
+    "informationAsRequested": "Information as requested in related decisions adopted by the Conference of the Parties at its fifteenth meeting",
+    "draftRecords": "Draft records",
+    "previewSectionI": "Preview section I",
+    "previewSectionII": "Preview section II",
+    "previewSectionIII": "Preview section III",
+    "previewSectionIV": "Preview section IV",
+    "previewSectionV": "Preview section V",
+    "previewSectionANNEX": "Preview section ANNEX",
+    "editSectionI": "Edit section I",
+    "editSectionII": "Edit section II",
+    "editSectionIII": "Edit section III",
+    "editSectionIV": "Edit section IV",
+    "editSectionV": "Edit section V",
+    "editSectionANNEX": "Edit section ANNEX"
 }
