--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-I.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-I.json
@@ -1,4 +1,5 @@
 {
+    "general": "General",
     "sectionI": "Section I",
     "sectionIDescription":"Brief overview of the process of preparation of the report",
     "preparationProcess":"Please briefly describe the process undertaken for the preparation of this report (responses may include the following)",
