--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-VI.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-VI.json
@@ -1,3 +1,5 @@
-{"sectionII":"Section II",
-"sectionIIDescription":"Status of the revised or updated national biodiversity strategies and action plans (NBSAPs) in the light of the Kunming-Montreal Global Biodiversity Framework ",
+{
+    "nr7SectionVI":"NR7 Section VI",
+    "elementsOfTheGlobalTargets":"Elements of the global targets",
+    "elementsOfTheGlobalTargetsAddress": "Elements of the global targets addressed by national targets"
 }
