--- a/i18n/en/components/pages/nr7/my-country/view/index.json
+++ b/i18n/en/components/pages/nr7/my-country/view/index.json
@@ -1,1 +1,25 @@
-{}
+{
+    "overview": "Overview",
+    "welcomeTo": "Welcome to",
+    "holySee": "Holy See",
+    "7thNationalReportOverview": "7th National Report Overview",
+    "save":"Save",
+    "publish": "Publish",
+    "share": "Share",
+    "pdf": "PDF",
+    "sectionI": "Section I",
+    "executiveSummaryReport": "Executive summary of the report",
+    "update": "Update",
+    "sectionII": "Section II",
+    "briefOverviewPreparationReport": "Brief overview of the process of preparation of the report",
+    "sectionIII": "Section III",
+    "statusUpdatedNationalBiodiversity": "Status of the updated or revised national biodiversity strategies and action plans (NBSAPs) in the light of the post-2020 global biodiversity framework",
+    "sectionIV": "Section IV",
+    "assessmentOfProgress2050Goals": "Assessment of progress towards the 2050 goals",
+    "sectionV": "Section V",
+    "assessmentOfProgressNationalTargets": "Assessment of progress towards national targets and contributions to progress in the 2030 action targets",
+    "sectionVI": "Section VI",
+    "conclusionsImplementationConvention": "Conclusions on the implementation of the Convention and the post-2020 global biodiversity framework",
+    "annex": "Annex",
+    "informationAsRequested": "Information as requested in related decisions adopted by the Conference of the Parties at its fifteenth meeting"
+}
