move text to json files

--- a/i18n/en/components/controls/my-country/country-record-type-records.json
+++ b/i18n/en/components/controls/my-country/country-record-type-records.json
@@ -10,5 +10,6 @@
     "validating"    : "Validating...",
     "filterByTitle": "Filter by title",
     "filterByGlobalTargets": "Filter by global targets",
-    "filterByGlobalGoals": "Filter by global goals"
+    "filterByGlobalGoals": "Filter by global goals",
+    "clearFilters": "Clear filters"
 }
