--- a/i18n/en/components/controls/edit/link/link-editor.json
+++ b/i18n/en/components/controls/edit/link/link-editor.json
@@ -9,5 +9,6 @@
     "language": "Language",
     "pleaseSelectLanguage": "Please select Language",
     "cancel": "Cancel",
-    "save": "Save"
+    "save": "Save",
+    "or": "or"
 }
