--- a/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-add-binary-indicator-data.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-add-binary-indicator-data.json
@@ -1,4 +1,8 @@
 {
     "editBinaryIndicatorData" : "Edit response",
-    "addBinaryIndicatorData"  : "Add response"
+    "addBinaryIndicatorData"  : "Add response",
+    "general": "General",
+    "government": "Government",
+    "selectLangauges": "Please select in which language(s) you wish to submit this record"
+
 }
