--- a/i18n/en/components/pages/taxonomy/gbf/gbf-taxonomy-list.json
+++ b/i18n/en/components/pages/taxonomy/gbf/gbf-taxonomy-list.json
@@ -1,1 +1,4 @@
-{}
+{
+    "globalBiodiversityFrameworkGoals": "Global Biodiversity Framework Goals",
+    "globalBiodiversityFrameworkTargets": "Global Biodiversity Framework Targets"
+}
