--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-I.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-I.json
@@ -5,5 +5,8 @@
     "preparationProcess":"Please briefly describe the process undertaken for the preparation of this report (responses may include the following)",
     "coordination":"Coordination mechanisms and methodology for data collection and validation employed (if applicable) as well as key challenges encountered;",
     "consultation":"Consultations undertaken at various levels for preparing this report, involving and engaging various stakeholders, taking into account national circumstances.",
-    "sectionMandatory" : "All fields in Section I are mandatory"
+    "sectionMandatory" : "All fields in Section I are mandatory",
+    "government": "Government",
+    "selectLangauges": "Please select in which language(s) you wish to submit this record"
+
 }
