move  translation text to json files

--- a/i18n/en/components/pages/national-targets/national-targets-analyzer.json
+++ b/i18n/en/components/pages/national-targets/national-targets-analyzer.json
@@ -1,3 +1,54 @@
 {
-    "noRecords" : "No records found"
+    "noRecords" : "No records found",
+    "generalCount": "General count",
+    "partiesWithAtLeast": "Parties with at least 1 national target",
+    "part1": "National Targets (Part I)",
+    "progressInTargetSetting": "Progress in target setting (by regions)",
+    "numberOfParties": "Number of Parties that have set at least one national target",
+    "numberOfPartiesByCBD": "Number of Parties by CBD regional groups",
+    "partyCount": "Party count",
+    "showParties": "Show parties",
+    "total": "Total",
+    "progressInTargetSettingByParties": "Progress in target setting (by parties)",
+    "averageNumber": "Average number of national targets set by a Party",
+    "min": "Min",
+    "max": "Max",
+    "averageNumberOfGBF": "Average number of GBF targets covered by a Party",
+    "numberOfPartiesNT": "Number of Parties that have set national targets for every GBF target ",
+    "party": "Party",
+    "numberOfPartiesMoreTan": "Number of Parties that have set national targets for more than 75% of the GBF targets",
+    "forEachGBFTarget": "For each GBF target, percent of parties that have a national target which has been mapped to it",
+    "target": "Target",
+    "percent": "Percent",
+    "nationalTargetCount": "National target count",
+    "progressInMonitoring": "Progress in monitoring",
+    "numberOfPartiesIdentified": "Number of Parties that have identified any indicators",
+    "targetCount": "Target count",
+    "componentIndicators": "Component indicators",
+    "complementaryIndicators": "Complimentary indicators",
+    "nationalIndicators": "National indicators",
+    "progressInAmbition": "Progress in ambition/relevance",
+    "degreeOfAlignment": "Degree of alignment as reported by Parties.",
+    "numberOfNationalTargets": "The number of national targets, as reporting by Parties, with high, medium, low with this GBF target.",
+    "GBFTarget": "GBF target",
+    "high": "High",
+    "medium": "Medium",
+    "low": "Low",
+    "notReported": "Not reported",
+    "progressInSectionC": "Progress in Section C",
+    "averageNumberOfElements": "Average number of elements of Section C that Parties say have been consAverage number of elements of Section C that Parties say have been considered in developing their NBSAPidered in developing their NBSAP",
+    "numberOfPartiesHaveElements": "Number of Parties that have elements of Section C that have been considered in developing their NBSAP",
+    "elementsInSectionC": "No. of elements included in Section C",
+    "elementsInSectionCHaveParties": "For each GBF target, elements of Section C that Parties say have been considered",
+    "nationalTargetsInSectionC": "National targets that include Section C",
+    "totalNationalTargets": "Total national targets",
+    "nonStateActor": "Non-state actor",
+    "nonStateActorCountries": "Number of countries that have included non-state actor commitments in their target submission",
+    "nonStateActorParties": "Number of parties with non-state actor commitments by target",
+    "parties": "Parties",
+    "exportNationalTargets": "Export national targets",
+    "numberOfNationalTargetsReported": "Number of national targets reported",
+    "KMGBFGoals": "KMGBF Goal(s)",
+    "KMGBFTargets": "KMGBF Target(s)"
+
 }
