--- a/i18n/en/components/actions/workflow-actions.json
+++ b/i18n/en/components/actions/workflow-actions.json
@@ -31,8 +31,9 @@
     "yes": "Yes",
     "no": "No",
     "deleteConfirmation": "Delete Confirmation",
-    "isDeleteRecord": "Are you sure you want to delete this record?",
+    "deletePublishingRequestConfirm": "Are you sure you want to delete this record?",
     "deleteRecord": "Delete record",
+    "deleteProcessing": "Please wait while we process your delete action",
     "approvalProcessing": "Please wait while we process your approval action",
     "cancellationProcessing": "Please wait while we process your cancellation request",
     "requestAssignedTo": "The request is currently assigned to."
