--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
@@ -1,22 +1,24 @@
 {
     "sectionII"             : "Section II",
-    "sectionIIDescription"  : "Status of the revised or updated national biodiversity strategies and action plans (NBSAPs) in the light of the Kunming-Montreal Global Biodiversity Framework ",
-    "revisedNbsap"          : "Has your country revised or updated NBSAPs in the light of the Kunming-Montreal Global Biodiversity Framework?",
+    "sectionIIDescription"  : "Status of the revised or updated national biodiversity strategy and action plan in alignment with the Kunming-Montreal Global Biodiversity Framework",
+    "sectionMandatory" : "All fields in Section II are mandatory",
+    "revisedNbsap"          : "Has your country revised or updated its national biodiversity strategy and action plan in alignment with the Framework?",
     "yes"                   : "Yes",
     "no"                    : "No",
     "inProcess"             : "In Process",
-    "anticipatedNbsapDate": "Please indicate the anticipated date of completion of the revision or updating of the NBSAP",
-    "stakeholderEngagement" : "Did your country involve and engage stakeholders in revising or updating NBSAPs?",
+    "other"                 : "Other",        
+    "anticipatedNbsapDate": "Please indicate the expected date of completion of the revision or updating of the national biodiversity strategy and action plan?",
+    "stakeholderEngagement" : "Did your country involve and engage stakeholders in revising or updating its national biodiversity strategy and action plan?",
     "stakeholders"          : "Stakeholders",
-    "hasNbsapAdopted"       : "Has your country's revised or updated NBSAPs been adopted as policy or legal instruments?",
-    "anticipatedNbsapAdoptionDate"  : "Please indicate the anticipated date of adoption",
-    "policyInstrument"     : "Please indicate the type of policy instrument your country's revised or updated NBSAPs has been adopted as",
-    "sectionMandatory" : "All fields in Section II are mandatory",
-    "headlineIndicators": "Headline Indicators",
+    "hasNbsapAdopted"       : "Has your country’s revised or updated national biodiversity strategy and action plan been adopted as a policy or a legal instrument, and/or integrated into other strategies?",
+    "anticipatedNbsapAdoptionDate"  : "Please specify and indicate the expected date of adoption",
+    "policyInstrument"     : "Please indicate how your country’s revised or updated national biodiversity strategy and action plan has been adopted",
+    "implementationProgress": "Briefly describe the national biodiversity monitoring system and how it tracks progress in the implementation of the national biodiversity strategy and action plan.",    "headlineIndicators": "Headline Indicators",
     "binaryIndicators": "Binary Indicators",
     "componentIndicators": "Component Indicators",
     "complementaryIndicators": "Complementary Indicators",
     "otherNationalIndicators": "Other National Indicators",
     "componentIndicatorsNotLinked": "Would you like to provide data for other component indicators not linked to your country’s national targets?",
     "complementaryIndicatorsNotLinked": "Would you like to provide data for other complementary indicators not linked to your country’s national targets?"
+    
 }
