--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-IV.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-IV.json
@@ -1,6 +1,6 @@
 {
     "sectionIV":"Section IV",
-    "sectionIVDescription":"Assessment of national progress towards the goals and targets of the Kunming-Montreal Global Biodiversity Framework",
+    "sectionIVDescription":"Assessment of national progress contributing to the goals of the Kunming-Montreal Global Biodiversity Framework",
     "headline": "Headline indicator",
     "binary": "Binary indicator",
     "component": "Component indicator",
