--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-VI.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-VI.json
@@ -1,5 +1,3 @@
 {
-    "nr7SectionVI":"NR7 Section VI",
-    "elementsOfTheGlobalTargets":"Elements of the global targets",
-    "elementsOfTheGlobalTargetsAddress": "Elements of the global targets addressed by national targets"
+    "annex":"Other information"
 }
