--- a/i18n/en/components/layout/AppHeaderDropdownAccnt.json
+++ b/i18n/en/components/layout/AppHeaderDropdownAccnt.json
@@ -2,5 +2,7 @@
     "settings":"Settings",
     "signIn":"Sign in",
     "emailAlerts": "Email Alerts",
-    "profile": "Profile"
+    "profile": "Profile",
+    "sessionExpiredTitle":"Session expired",
+    "sessionExpiredDescription":"Your session has expired. Please sign in again."
 }
