--- a/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-add-indicator-data.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-add-indicator-data.json
@@ -10,7 +10,10 @@
     "pleaseSelectLanguage": "Please select in which language(s) you wish to submit this record",
     "nationalDataSet": "National data set",
     "downloadIndicator": "Download sample template for the Indicator",
+    "fileFormatMessage": "The system strictly requires the data in the format of the sample template. Please download the sample template and fill in the data accordingly.",
     "globalDataSet": "Global data set",
-    "noGlobalDataIndicator": "No global data found for this Indicator."
+    "noGlobalDataIndicator": "No global data found for this Indicator.",
+    "columnsMismatch":"Your excel file is not following the template (column mismatch) expected columns are \"{count}\", please use the system provided template",
+    "columnsInvalid":"Column name \"{colName}\" is invalid at column no \"{colNo}\" expected name is \"{colExpected}\", please follow the sequence provided in the template"
 
 }
