Improves NR7 workflow and data handling
Enhances the NR7 workflow by adding a "Go to submission" button for easier navigation.
Adds the ability to preview sections directly from the overview page.
Improves data handling in indicator data forms, including displaying global data sources and descriptions.
Fixes validation issues and improves overall user experience.

--- a/i18n/en/components/controls/edit/KmFormWorkflow.json
+++ b/i18n/en/components/controls/edit/KmFormWorkflow.json
@@ -15,7 +15,8 @@
     "submissionForm": "Submission form",
     "intro": "Intro",
     "form": "Form",
-
+    "goToSubmission": "Go to submission",
+    
    "introduction": "Introduction",
    "submission"  : "Submission",
    "review"      : "Review",
